--- a/testing/image-js-polyglot-testpages/jpeg_js.html
+++ b/testing/image-js-polyglot-testpages/jpeg_js.html
@@ -3,7 +3,7 @@
 	<title>JPEG-JS Polyglot</title>
 </head>
 <body>
-<img src="../../output/jpeg_js.js.jpeg">
-<script src="../../output/jpeg_js.js.jpeg"></script>
+<img src="../../output/jpeg_js.js.jpg">
+<script src="../../output/jpeg_js.js.jpg"></script>
 </body>
 </html>
