Add charset to JPEG-JS polyglot testpage

--- a/testing/image-js-polyglot-testpages/jpeg_js.html
+++ b/testing/image-js-polyglot-testpages/jpeg_js.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <img src="../../output/jpeg_js.js.jpg">
-<script src="../../output/jpeg_js.js.jpg"></script>
+<script charset="ISO-8859-1" src="../../output/jpeg_js.js.jpg"></script>
 </body>
 </html>
